[package]
name = "ayarla"
version = "0.1.0"
edition = "2021"
description = "Manages your dotfiles"
license = "MIT"
repository = "https://github.com/kdrblkbs/ayarla"
homepage = "https://github.com/kdrblkbs/ayarla"
readme = "README.md"
keywords = ["dotfiles", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version ="1.0.219", features = ["derive"] }
toml = "0.8.22"

[dev-dependencies]
tempfile = "3.5"
